--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       let brickPadding = 10;
       let brickOffsetTop = 30;
       let brickOffsetLeft = 30;
+      let score = 0;
 
       const bricks = [];
       for(let c = 0; c < brickColumnCount; c++) {
@@ -100,7 +101,6 @@
         }
       }
 
-
       function collisionDetection() {
         for (let c = 0; c < brickColumnCount; c++) {
           for (let r = 0; r < brickRowCount; r++) {
@@ -114,10 +114,24 @@
               ) {
                 dy = -dy;
                 b.status = 0;
+                score++;
+                if (score === brickRowCount * brickColumnCount) {
+                  alert("YOU WIN, CONGRATULATIONS! YOUR SCORE: " + score);
+                  document.location.reload();
+                  clearInterval(interval);
+                }
               }
             }
           }
         }
+      }
+
+
+
+      function drawScore() {
+        ctx.font = "16px Arial";
+        ctx.fillStyle = "#0095DD";
+        ctx.fillText(`Score: ${score}`, 8, 20);
       }
 
       function draw() {
@@ -125,6 +139,7 @@
           drawBricks();
           drawBall();
           drawPaddle();
+          drawScore();
           collisionDetection();
           
           if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
