Created Ball and Brick class

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
   </head>
   <body>
     <canvas id="myCanvas" width="545" height="320"></canvas>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script> 
   </body>
 </html>
